<resources>
	<string name="app_name">Teleposter</string>
	<string name="share">Share</string>
	<string name="help">Help</string>
	<string name="help_text">
		<![CDATA[<h3>Why can\'t I select headings?</h3>Unfortunately I wasn\'t able to add the feature yet, but you can do it manually via the code editor.<h3>Why can\'t I login with my Telegram account?</h3>That\'s not possible!<h3>Used libraries</h3><a href=\"https://github.com/afollestad/material-dialogs\">Material Dialogs</a>, <a href=\"https://github.com/kittinunf/Fuel\">Fuel</a>, <a href=\"https://github.com/delight-im/Android-AdvancedWebView\">AdvancedWebView</a>, <a href=\"https://github.com/googlesamples/easypermissions\">EasyPermissions</a><h3>About</h3>This app is made by <a href="https://jlelse.me">Jan-Lukas Else</a> and it\'s code is published on <a href="https://github.com/jlelse/teleposter">Github</a>.]]></string>
	<string name="bookmarks">Bookmarks</string>
	<string name="bookmark_this">Bookmark this</string>
	<string name="create">Create</string>
	<string name="title_question">Title?</string>
	<string name="title_hint">Awesome Post #1</string>
	<string name="delete">Delete</string>
	<string name="delete_question">Do you really want to delete this?</string>
	<string name="publish">Publish</string>
	<string name="edit">Edit (safe)</string>
	<string name="try_edit">Edit (unsafe)</string>
	<string name="error">Error</string>
	<string name="error_desc">Something unexpected happened!</string>
	<string name="viewer_html_head">
		<![CDATA[<!DOCTYPE html><html><head><meta charset=\"utf-8\"><meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\"><meta name=\"viewport\" content=\"width=device-width, initial-scale=1\"><link rel=\"stylesheet\" href=\"https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css\"><style> * { max-width: 100%; height: auto; word-break: break-all; word-break: break-word; }</style><script src=\"http://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js\"></script><script src=\"https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js\"></script></head><body>]]>
	</string>
	<string name="viewer_html_end">
		<![CDATA[</body></html>]]>
	</string>
	<string name="published">Published posts</string>
	<string name="name_question">Your name?</string>
	<string name="name_hint">Awesome Writer</string>
	<string name="add_image">Add image</string>
</resources>