<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/create"
		android:title="@string/create"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/publish"
		android:title="@string/publish"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/edit"
		android:title="@string/edit"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/try_edit"
		android:title="@string/try_edit"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/bookmark"
		android:title="@string/bookmark_this"
		app:showAsAction="never" />
	<item
		android:id="@+id/bookmarks"
		android:title="@string/bookmarks"
		app:showAsAction="never" />
	<item
		android:id="@+id/delete_bookmark"
		android:title="@string/delete_bookmark"
		app:showAsAction="never" />
	<item
		android:id="@+id/published"
		android:title="@string/published"
		app:showAsAction="never" />
	<item
		android:id="@+id/share"
		android:title="@string/share"
		app:showAsAction="never" />
	<item
		android:id="@+id/login"
		android:title="@string/login"
		app:showAsAction="never" />
	<item
		android:id="@+id/about"
		android:title="@string/about"
		app:showAsAction="never" />
</menu>